--- a/.antbuildrc
+++ b/.antbuildrc
@@ -7,7 +7,7 @@
 project-name=ODF
 project-is-war=false
 executable-file=odf
-main-class=Test
+main-class=com.ringlord.odf.Test
 default-source-version=1.7
 default-java-version=1.7
 repackage-libs=false
