--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--	************************************************************
 	Ant 1.6 (or later) Project Build File for: ODF
-	Constructed with AntBuilder 1.7 (22-Dec-2011)
+	Constructed with AntBuilder 1.8 (12-Apr-2012)
 	See http://ringlord.com/products/antbuilder/
 	************************************************************ -->
 <project name="ODF" default="compile" basedir=".">
@@ -70,7 +70,7 @@
 		<mkdir  dir="${build-dir}"/>
 		<javac  srcdir="${src-dir}"
 			destdir="${build-dir}"
-			source="1.6"
+			source="1.7"
 			target="${target}"
 			bootclasspath="${rt_jar}"
 			deprecation="true"
@@ -85,7 +85,7 @@
 			<format property="TODAY" pattern="yyyy-MMM-dd HH:mm:ss Z"/>
 		</tstamp>
 		<manifest file=".manifest" mode="update">
-			<attribute name="Main-Class" value="Test"/>
+			<attribute name="Main-Class" value="com.ringlord.odf.Test"/>
 			<attribute name="Implementation-Title" value="ODF"/>
 			<attribute name="Implementation-Version" value="1.0 (${TODAY})"/>
 		</manifest>
@@ -95,7 +95,7 @@
 			index="false"><!-- index='false' allows external JARs to be found -->
 			<fileset dir="${build-dir}" includes="**/*.class"/>
 			<fileset dir="." includes="LICENSE.TXT"/>
-                        <fileset dir="." includes="README.text"/>
+			<fileset dir="." includes="README.text"/>
 			<fileset dir="." includes="${src-dir}/**/*.java"/>
 			<fileset dir="." includes="build.xml"/>
 		</jar>
