--- a/build.xml
+++ b/build.xml
@@ -8,10 +8,10 @@
 	<property name="build-dir" value=".build"/>
 	<property name="src-dir"   value="src"/>
 	<property name="jdoc-path" value="jdoc"/>
-	<property name="archive"   value="odf.jar"/>
-	<property name="tar-file"  value="odf.tar"/>
+	<property name="archive"   value="rltodfjlib.jar"/>
+	<property name="tar-file"  value="rltodfjlib.tar"/>
 
-	<target name="all" depends="clean,jar,docs" description="Cleans project and then builds the odf.jar and the JavaDocs"/>
+	<target name="all" depends="clean,jar,docs" description="Cleans project and then builds the rltodfjlib.jar and the JavaDocs"/>
 
 	<target name="clean" description="Removes files that are rebuilt during compilation">
 		<delete dir="${build-dir}" verbose="false" quiet="true"/>
@@ -35,30 +35,30 @@
 		<delete file="${archive}.sha1" verbose="false" quiet="true"/>
 	</target>
 
-	<target name="jar4" description="Builds the odf.jar for Java 1.4">
+	<target name="jar4" description="Builds the rltodfjlib.jar for Java 1.4">
 		<property name="target" value="1.4"/>
 		<antcall target="jar"/>
 	</target>
 
-	<target name="jar5" description="Builds the odf.jar for Java 1.5">
+	<target name="jar5" description="Builds the rltodfjlib.jar for Java 1.5">
 		<property name="target" value="1.5"/>
 		<property name="rt_jar" value="/usr/lib/jvm/java-1.5.0-gcj/jre/lib/rt.jar"/>
 		<antcall target="jar"/>
 	</target>
 
-	<target name="jar6" description="Builds the odf.jar for Java 1.6">
+	<target name="jar6" description="Builds the rltodfjlib.jar for Java 1.6">
 		<property name="target" value="1.6"/>
 		<property name="rt_jar" value="/usr/lib/jvm/java-6-sun-1.6.0.26/jre/lib/rt.jar"/>
 		<antcall target="jar"/>
 	</target>
 
-	<target name="jar7" description="Builds the odf.jar for Java 1.7">
+	<target name="jar7" description="Builds the rltodfjlib.jar for Java 1.7">
 		<property name="target" value="1.7"/>
 		<property name="rt_jar" value="/usr/lib/jvm/jdk1.7.0_02/jre/lib/rt.jar"/>
 		<antcall target="jar"/>
 	</target>
 
-	<target name="jar8" description="Builds the odf.jar for Java 1.8">
+	<target name="jar8" description="Builds the rltodfjlib.jar for Java 1.8">
 		<property name="target" value="1.8"/>
 		<antcall target="jar"/>
 	</target>
@@ -80,7 +80,7 @@
 		</javac>
 	</target>
 
-	<target name="jar" depends="clean,compile" description="Constructs the odf.jar file">
+	<target name="jar" depends="clean,compile" description="Constructs the rltodfjlib.jar file">
 		<tstamp>
 			<format property="TODAY" pattern="yyyy-MMM-dd HH:mm:ss Z"/>
 		</tstamp>
@@ -114,26 +114,26 @@
 			forceOverwrite="yes"/>
 	</target>
 
-	<target name="dist" depends="clean,jar" description="Builds a distribution in odf.tar.gz INCLUDING source code">
+	<target name="dist" depends="clean,jar" description="Builds a distribution in rltodfjlib.tar.gz INCLUDING source code">
 		<tar    tarfile="${tar-file}.gz"
 			longfile="gnu"
 			compression="gzip">
 			<tarfileset	dir="."
-					prefix="odf"
+					prefix="rltodfjlib"
 					mode="750"
 					dirmode="750"
 					username="${user.name}"
-					group="odf">
+					group="rltodfjlib">
 				<include name="${archive}"/>
-				<include name="odf"/>
-				<include name="odf.bat"/>
+				<include name="rltodfjlib"/>
+				<include name="rltodfjlib.bat"/>
 			</tarfileset>
 			<tarfileset	dir="."
-					prefix="odf"
+					prefix="rltodfjlib"
 					mode="640"
 					dirmode="750"
 					username="${user.name}"
-					group="odf">
+					group="rltodfjlib">
 				<include name="README.text"/>
 				<include name="*.od?"/>
 				<include name="*.pdf"/>
