Fixed Null Pointer Exception (NPE) when Container's File did not exist.
Closing the Container that was created with a File that did not exist
caused a NPE because of a bad assumption.

--- a/.antbuildrc
+++ b/.antbuildrc
@@ -10,23 +10,22 @@ executable-file=rltodfjlib
 main-class=com.ringlord.odf.Test
 default-source-version=1.6
 default-java-version=1.7
-repackage-libs=false
-include-lib=false
+libraries=
 include-img=false
 include-src=true
 include-etc=false
+include-help=false
 checksum-executable=true
-git-support=true
-svn-support=false
-create-skeleton=false
-sign-executable=false
+log-support=git
+create-skeleton=None
+sign-executable=true
 sign-libraries=false
-sign-main-jar=false
-sign-properties-file=
+sign-properties-file=../.keystore-info
 jaxb-support=false
 path-src=src
 path-lib=lib
 path-img=img
+path-help=help
 path-etc=etc
 path-build=.build
 
