Improved handling of key derivation algorithms.
Key derivation algorithms other than PBKDF2 weren't directly supported,
and throw an exception now rather than quietly using PBKDF2, instead.
Also reformatted code according to my Eclipse settings, which isn't
always how I want it to behave, but Eclipse likes to be a jerk about
that kind of thing… :(

Fixed build.xml to not reference my home directory as an absolute path.

--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
 	          key-alias       The alias for the signing key
 	          key-pass        The password for the signing key
 -->
-	<property file="../.keystore-info"/>
+	<property file="/home/udo/projects/.keystore-info"/>
 
 	<target name="all" depends="clean,jar,docs" description="Cleans project and then builds the rltodfjlib.jar and the JavaDocs"/>
 
